--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "livewire/volt": "^1.7"
+        "livewire/volt": "^1.7",
+        "saade/filament-autograph": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
